<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Weather</string>

    <string name="action_weather">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About app</string>

    <string name="weather_title">Weather</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About app</string>
    <string name="change_city_title">City</string>
    <string name="title_activity_city_pick">Choose city</string>
    <string name="detail_title">Details</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="update_interval">Update interval</string>
    <string name="update_interval_default">2 hours</string>

    <string name="default_city">Moscow</string>

    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>

    <string name="loading_error">Loading error</string>
    <string name="updated_label">Updated</string>

    <string name="no_internet_message">Check your internet connection</string>
    <string name="city_list_title">Cities</string>
    <string name="add_city_title">Add city</string>
    <string name="city_filter_hint">Enter city name</string>

    <!-- Strings for formatting weather -->
    <string name="format_temperature" translatable="false"><xliff:g priority="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g priority="speed">%1$1.0f</xliff:g> mph <xliff:g priority="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g priority="speed">%1$1.0f</xliff:g> km/h <xliff:g priority="direction">%2$s</xliff:g></string>
    <string name="format_humidity">Humidity: %d %%</string>
    <string name="format_pressure">Pressure: %1.0f hPa</string>

    <string name="last_sync_format">Last refresh: %s</string>

    <string name="delete_city_title">Delete city</string>
    <string name="empty_weather_message">Choose your city</string>

    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units_key</string>
    <string name="units_metric">Celsius</string>
    <string name="units_imperial">Fahrenheit</string>
    <string name="units_metric_value" translatable="false">metric</string>
    <string name="units_imperial_value" translatable="false">imperial</string>

    <!-- Content descriptions -->
    <string name="add_city_content_description">Add new city</string>
    <string name="place_content_description">City</string>
    <string name="delete_city_content_description">Delete city</string>
    <string name="weather_icon_content_description">Weather</string>
    <string name="nav_weather_content_description">Weather</string>
    <string name="nav_delete_content_description">Delete city</string>
    <string name="nav_add_city_content_description">Add city</string>
    <string name="nav_ic_settings_content_description">Settings</string>
    <string name="nav_about_content_description">About</string>
    <string name="yandex_logo_content_description">Yandex</string>

</resources>
