<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="120"
        android:dialogTitle="@string/update_interval"
        android:entries="@array/update_intervals"
        android:entryValues="@array/update_intervals_values"
        android:key="update_interval_key"
        android:summary="@string/update_interval_default"
        android:title="@string/update_interval" />

    <ListPreference
        android:defaultValue="@string/units_metric_value"
        android:entries="@array/pref_units"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

</PreferenceScreen>