<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:priority="@+priority/nav_weather"
        android:icon="@drawable/ic_menu_weather"
        android:title="@string/action_weather" />

    <item
        android:priority="@+priority/city_chooser"
        android:title="@string/city_list_title"
        app:showAsAction="always" />

    <group android:priority="@+priority/secondary_options">

        <item
            android:priority="@+priority/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:priority="@+priority/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/action_about" />

    </group>

</menu>
