<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Weather-->
    <LinearLayout
        android:id="@+id/nav_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:minHeight="@dimen/nav_item_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/nav_icon_padding"
            android:src="@drawable/ic_menu_weather" />

        <TextView
            style="@style/nav_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/weather_title" />

    </LinearLayout>

    <!--City description-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/city_chooser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

    <!-- Delete cities -->
    <LinearLayout
        android:id="@+id/nav_delete_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:minHeight="@dimen/nav_item_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/nav_icon_padding"
            android:src="@drawable/ic_delete_selector" />

        <TextView
            style="@style/nav_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/delete_city_title" />

    </LinearLayout>

    <!--City picker-->
    <LinearLayout
        android:id="@+id/nav_city_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:minHeight="@dimen/nav_item_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/nav_icon_padding"
            android:src="@drawable/ic_add" />

        <TextView
            style="@style/nav_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/add_city_title" />

    </LinearLayout>

    <include layout="@layout/divider" />

    <!--Settings-->
    <LinearLayout
        android:id="@+id/nav_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:minHeight="@dimen/nav_item_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/nav_icon_padding"
            android:src="@drawable/ic_menu_settings" />

        <TextView
            style="@style/nav_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/settings_title" />

    </LinearLayout>

    <!--About-->
    <LinearLayout
        android:id="@+id/nav_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:minHeight="@dimen/nav_item_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/nav_icon_padding"
            android:src="@drawable/ic_menu_about" />

        <TextView
            style="@style/nav_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/about_title" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_yandex_logo"/>

</LinearLayout>